Add organizeIngredients.js
